[gd_scene load_steps=12 format=2]

[ext_resource path="res://menu/PauseScreen.gd" type="Script" id=1]
[ext_resource path="res://graphic/fonts/PressStart2P.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://menu/Buttons.gd" type="Script" id=3]
[ext_resource path="res://buttons/RetryButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://buttons/RetryButton.gd" type="Script" id=5]
[ext_resource path="res://buttons/Continue2Button.tscn" type="PackedScene" id=6]
[ext_resource path="res://buttons/QuitButton.tscn" type="PackedScene" id=7]



[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0, 0.211765, 1 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0, 0, 0, 0.266667 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[node name="PauseScreen" type="Control"]
script = ExtResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 829.0
margin_top = 392.0
margin_right = 1139.0
margin_bottom = 452.0

[node name="Label" type="Label" parent="Menu"]
margin_right = 310.0
margin_bottom = 60.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 6
text = "Pause"

[node name="Buttons" type="VBoxContainer" parent="."]
margin_left = 822.0
margin_top = 572.0
margin_right = 1182.0
margin_bottom = 796.0
custom_constants/separation = 20
script = ExtResource( 3 )

[node name="RetryButton" parent="Buttons" instance=ExtResource( 4 )]
margin_right = 360.0
margin_bottom = 62.0
size_flags_vertical = 3
script = ExtResource( 5 )

[node name="Continue2Button" parent="Buttons" instance=ExtResource( 6 )]
margin_top = 82.0
margin_right = 360.0
margin_bottom = 142.0
custom_styles/focus = SubResource( 2 )

[node name="QuitButton" parent="Buttons" instance=ExtResource( 7 )]
margin_top = 162.0
margin_right = 360.0
margin_bottom = 224.0
size_flags_vertical = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
margin_right = 1920.0
margin_bottom = 1080.0
texture = SubResource( 4 )
stretch_mode = 1
[connection signal="close_pausescreen" from="Buttons" to="." method="_on_Buttons_close_pausescreen"]
[connection signal="pressed" from="Buttons/RetryButton" to="Buttons" method="_on_RetryButton_pressed"]
[connection signal="pressed" from="Buttons/Continue2Button" to="Buttons" method="_on_Continue2Button_pressed"]
[connection signal="pressed" from="Buttons/QuitButton" to="Buttons" method="_on_QuitButton_pressed"]
